# taking_stock_facct

./: .gitignore  Dockerfile  README.md  comment-groups.csv  comments.csv  participant-votes.csv  pyproject.toml  sentences_topic_pipeline.ipynb  summary.csv  votes.csv
